--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
+  <link rel="icon" type="image/x-icon" href="music.ico">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body background="background.jpg">
